fix: adjust padding and position of song expand button for better alignment

--- a/spotify-react/src/Song.css
+++ b/spotify-react/src/Song.css
@@ -29,7 +29,7 @@
 }
 
 .song-expand-button {
-  bottom: 3px;
+  bottom: 6px;
   position: absolute;
   left: 0;
   transform: translateX(-10px);
@@ -60,7 +60,7 @@
   height: 15%;
 
   margin-bottom: 24px;
-  padding-inline: 28px;
+  padding-inline: 20px;
   display: flex;
   align-items: center;
   overflow: hidden;
